chore(pom): remove db deps & replace synchronous deps with reactive